added new photo

--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
                     <li class="mobile-profile">
                      <div class="profile-inner">
                         <div class="pp-container">
-                            <img src="images/comical.jpg" alt="">
+                            <img src="images/al.jpg" alt="">
                         </div>
                         <h3>al martinez</h3>
                         <h5>fullstack webdeveloper</h5>
@@ -187,7 +187,7 @@
 
             <div class="col-sm-6 col-md-4">
               <div class="person-img wow fadeIn">
-                <img class="z-depth-1" src="images/comical.jpg" alt="">
+                <img class="z-depth-1" src="images/al.jpg" alt="">
               </div>
             </div>
             <!-- about me image -->
