demo links added

--- a/public/index.html
+++ b/public/index.html
@@ -742,7 +742,7 @@
               
               <!-- Single Portfolio-->
                 <li class="single-port-item category-1 category-3">
-                  <a href="#portfolioModal" class="waves-effect waves-block waves-light modal-trigger" data-image-source="images/usabridge.jpg" data-title="Bridges. Helping people become US citizens" data-content="a passion project made to help people reach their dreams of becoming citizens of the United States.Technologies used in this project include firebase, html, materialize,javascript and jquery." data-demo-link="#"> <!-- Portfolio pop-up content-->
+                  <a href="#portfolioModal" class="waves-effect waves-block waves-light modal-trigger" data-image-source="images/usabridge.jpg" data-title="Bridges. Helping people become US citizens" data-content="a passion project made to help people reach their dreams of becoming citizens of the United States.Technologies used in this project include firebase, html, materialize,javascript and jquery." data-demo-link="serene-anchorage-58647.herokuapp.com"> <!-- Portfolio pop-up content-->
                     <div class="protfolio-image">
                       <img src="images/usabridge.jpg" width="390" height="280" alt="portfolio"> <!-- portfolio thumbnail-->
                       <div class="protfolio-content waves-effect waves-block waves-light">
@@ -806,7 +806,7 @@
 
                 <!-- Single Portfolio-->
                 <li class="single-port-item category-1 category-3 category-4">
-                  <a href="#portfolioModal" class="waves-effect waves-block waves-light modal-trigger" data-image-source="images/mtvrapsbackground.jpg" data-title="YO! ATV raps" data-content="a simple fun 'hangman' game inspired by a 90's MTV hip hop show created by using bootstrap, jquery and spotify api. enjoy." data-demo-link="#">
+                  <a href="#portfolioModal" class="waves-effect waves-block waves-light modal-trigger" data-image-source="images/mtvrapsbackground.jpg" data-title="YO! ATV raps" data-content="a simple fun 'hangman' game inspired by a 90's MTV hip hop show created by using bootstrap, jquery and spotify api. enjoy." data-demo-link="http://radiant-bayou-39256.herokuapp.com/">
                     <div class="protfolio-image">
                       <img  src="images/mtvrapsbackground.jpg" width="390" height="280" alt="portfolio">
                       <div class="protfolio-content waves-effect waves-block waves-light">
@@ -822,7 +822,7 @@
 
                 <!-- Single Portfolio-->
                 <li class="single-port-item category-3">
-                  <a href="#portfolioModal" class="waves-effect waves-block waves-light modal-trigger" data-image-source="images/boxingbackground2.jpg" data-title="Royal Rumble RPG" data-content="a role playing game where you get to fight as a legendary boxer againist other legendary boxers. Technologies use include html,bootstrap, css, javascript and jquery." data-demo-link="#">
+                  <a href="#portfolioModal" class="waves-effect waves-block waves-light modal-trigger" data-image-source="images/boxingbackground2.jpg" data-title="Royal Rumble RPG" data-content="a role playing game where you get to fight as a legendary boxer againist other legendary boxers. Technologies use include html,bootstrap, css, javascript and jquery." data-demo-link="http://peaceful-citadel-36303.herokuapp.com/">
                     <div class="protfolio-image">
                       <img src="images/boxingbackground2.jpg" width="390" height="280" alt="portfolio">
                       <div class="protfolio-content waves-effect waves-block waves-light">
