demo links bridges

--- a/public/index.html
+++ b/public/index.html
@@ -742,7 +742,7 @@
               
               <!-- Single Portfolio-->
                 <li class="single-port-item category-1 category-3">
-                  <a href="#portfolioModal" class="waves-effect waves-block waves-light modal-trigger" data-image-source="images/usabridge.jpg" data-title="Bridges. Helping people become US citizens" data-content="a passion project made to help people reach their dreams of becoming citizens of the United States.Technologies used in this project include firebase, html, materialize,javascript and jquery." data-demo-link="serene-anchorage-58647.herokuapp.com"> <!-- Portfolio pop-up content-->
+                  <a href="#portfolioModal" class="waves-effect waves-block waves-light modal-trigger" data-image-source="images/usabridge.jpg" data-title="Bridges. Helping people become US citizens" data-content="a passion project made to help people reach their dreams of becoming citizens of the United States.Technologies used in this project include firebase, html, materialize,javascript and jquery." data-demo-link="http://serene-anchorage-58647.herokuapp.com/"> <!-- Portfolio pop-up content-->
                     <div class="protfolio-image">
                       <img src="images/usabridge.jpg" width="390" height="280" alt="portfolio"> <!-- portfolio thumbnail-->
                       <div class="protfolio-content waves-effect waves-block waves-light">
