--- a/public/index.html
+++ b/public/index.html
@@ -199,7 +199,7 @@
                 <h5><span>Age :</span> 34 </h5>
                 <h5><span>Phone :</span> 973-449-0532</h5>
                 <h5><span>Email :</span> alcreates101@gmail.com</h5>
-                <h5><span>Address :</span> Whippany, Nj</h5>
+                <h5><span>Address :</span>NYC metro area</h5>
               </div>
 
               <div class="about-social">
