added a scarface project

--- a/public/index.html
+++ b/public/index.html
@@ -801,7 +801,45 @@
             <div class="col-sm-12">
               <ul class="clearfix protfolio-item" id="protfolio-msnry">
               
-              <!-- Single Portfolio-->
+              
+ <!-- Single Portfolio-->
+              <li class="single-port-item category-1 category-3">
+                  <a href="#portfolioModal" class="waves-effect waves-block waves-light modal-trigger" data-image-source="images/tech.png" data-title="techScrape. " data-content="TechScrape is an app created to help tech professionals keep track of tech news. It scrapes the front page of techcrunch and allows users to make and save notes on interesting articles. Front end technologies include html, css, and JavaScript. Backend technologies include Node.js, express, mongodb, and moongose." data-demo-link="https://sleepy-waters-57407.herokuapp.com/"> <!-- Portfolio pop-up content-->
+                    <div class="protfolio-image">
+                      <img src="images/tech.png" width="390" height="280" alt="portfolio"> <!-- portfolio thumbnail-->
+                      <div class="protfolio-content waves-effect waves-block waves-light">
+                        <div class="protfolio-content__inner">
+                          <h2 class="p-title">techScrape</h2>
+                        </div>
+                      </div>
+                      <div class="p-overlay"></div>
+                    </div>
+                  </a>
+                </li>
+                <!--/ single portfolio -->
+
+
+
+                <li class="single-port-item category-1 category-3">
+                  <a href="#portfolioModal" class="waves-effect waves-block waves-light modal-trigger" data-image-source="https://pbs.twimg.com/profile_images/1449593125/BB_logo.jpg" data-title="Big Boys Burger. " data-content="An app to create and keep track of the burgers you have eaten. Technologies used include bootstrap, JavaScript, jQuery for the front end and a Node.js/express backend server hooked up with a MySQL data base." data-demo-link="http://newburgertime.herokuapp.com/"> <!-- Portfolio pop-up content-->
+                    <div class="protfolio-image">
+                      <img src="https://pbs.twimg.com/profile_images/1449593125/BB_logo.jpg" width="390" height="280" alt="portfolio"> <!-- portfolio thumbnail-->
+                      <div class="protfolio-content waves-effect waves-block waves-light">
+                        <div class="protfolio-content__inner">
+                          <h2 class="p-title">BigBoysBurger</h2>
+                        </div>
+                      </div>
+                      <div class="p-overlay"></div>
+                    </div>
+                  </a>
+                </li>
+                <!--/ single portfolio -->
+
+
+
+
+
+<!-- Single Portfolio-->
                 <li class="single-port-item category-1 category-3">
                   <a href="#portfolioModal" class="waves-effect waves-block waves-light modal-trigger" data-image-source="images/usabridge.jpg" data-title="Bridges. Helping people become US citizens" data-content="a passion project made to help people reach their dreams of becoming citizens of the United States.Technologies used in this project include firebase, html, materialize,javascript and jquery." data-demo-link="http://serene-anchorage-58647.herokuapp.com/"> <!-- Portfolio pop-up content-->
                     <div class="protfolio-image">
@@ -896,6 +934,20 @@
                   </a>
                 </li>
                 <!--/ single portfolio -->
+
+                <li class="single-port-item category-3">
+                  <a href="#portfolioModal" class="waves-effect waves-block waves-light modal-trigger" data-image-source="https://i.ytimg.com/vi/usR-Q81m0v4/maxresdefault.jpg" data-title="Royal Rumble RPG" data-content="A game app that picks which character you would be from the movie Scarface through a survey that the user completes. Technologies use include html,bootstrap, css, JavaScript, jQuery, Node.js and express" data-demo-link="http://scarface.herokuapp.com/">
+                    <div class="protfolio-image">
+                      <img src= "https://i.ytimg.com/vi/usR-Q81m0v4/maxresdefault.jpg" width="390" height="280" alt="portfolio">
+                      <div class="protfolio-content waves-effect waves-block waves-light">
+                        <div class="protfolio-content__inner">
+                          <h2 class="p-title">Scarface Character Pick</h2>
+                        </div>
+                      </div>
+                      <div class="p-overlay"></div>
+                    </div>
+                  </a>
+                </li>
 
 
               </ul>
