--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
 
                     <li><a href="#about" data-section="#about" class="menu-smooth-scroll"><i class="fa fa-user fa-fw"></i>About Me</a>
                     </li>
-                    <li><a href="#resume" data-section="#resume" class="menu-smooth-scroll"><i class="fa fa-file-text fa-fw"></i>Resume</a>
+                    <li><a href="/download" data-section="#resume" class="menu-smooth-scroll"><i class="fa fa-file-text fa-fw"></i>Resume</a>
                     </li>
                     <li><a href="#portfolio" data-section="#portfolio" class="menu-smooth-scroll"><i class="fa fa-briefcase fa-fw"></i>Portfolio</a>
                     </li>
@@ -180,7 +180,7 @@
                 <h3 class="about-subtitle">My Story</h3>
                 <p>A full stack web developer with an entrepreneurial background looking to contribute to the technological landscape of tomorrow. Able to create sophisticated web applications with full database backend, from start to finish.   
                   </p>
-                <a class="waves-effect waves-light btn-large brand-bg white-text"><i class="mdi-content-archive left"></i> Download Resume</a>
+                <a href="/download" class="waves-effect waves-light btn-large brand-bg white-text"><i class="mdi-content-archive left"></i> Download Resume</a>
               </div>
             </div>
             <!-- about me description -->
