--- a/public/index.html
+++ b/public/index.html
@@ -821,12 +821,12 @@
 
 
                 <li class="single-port-item category-1 category-3">
-                  <a href="#portfolioModal" class="waves-effect waves-block waves-light modal-trigger" data-image-source="https://pbs.twimg.com/profile_images/1449593125/BB_logo.jpg" data-title="Big Boys Burger. " data-content="An app to create and keep track of the burgers you have eaten. Technologies used include bootstrap, JavaScript, jQuery for the front end and a Node.js/express backend server hooked up with a MySQL data base." data-demo-link="http://newburgertime.herokuapp.com/"> <!-- Portfolio pop-up content-->
+                  <a href="#portfolioModal" class="waves-effect waves-block waves-light modal-trigger" data-image-source="images/netWatch.png" data-title="netWatch " data-content="An app to create and keep track of movies or shows to watch. Technologies used include bootstrap, JavaScript, jQuery for the front end and a Node.js/express backend server hooked up with a MySQL data base." data-demo-link="http://newburgertime.herokuapp.com/"> <!-- Portfolio pop-up content-->
                     <div class="protfolio-image">
-                      <img src="https://pbs.twimg.com/profile_images/1449593125/BB_logo.jpg" width="390" height="280" alt="portfolio"> <!-- portfolio thumbnail-->
+                      <img src="images/netWatch.png" width="390" height="280" alt="portfolio"> <!-- portfolio thumbnail-->
                       <div class="protfolio-content waves-effect waves-block waves-light">
                         <div class="protfolio-content__inner">
-                          <h2 class="p-title">BigBoysBurger</h2>
+                          <h2 class="p-title">netWatch</h2>
                         </div>
                       </div>
                       <div class="p-overlay"></div>
