techScrape screen shot

--- a/public/index.html
+++ b/public/index.html
@@ -804,9 +804,9 @@
               
  <!-- Single Portfolio-->
               <li class="single-port-item category-1 category-3">
-                  <a href="#portfolioModal" class="waves-effect waves-block waves-light modal-trigger" data-image-source="images/tech.png" data-title="techScrape. " data-content="TechScrape is an app created to help tech professionals keep track of tech news. It scrapes the front page of techcrunch and allows users to make and save notes on interesting articles. Front end technologies include html, css, and JavaScript. Backend technologies include Node.js, express, mongodb, and moongose." data-demo-link="https://sleepy-waters-57407.herokuapp.com/"> <!-- Portfolio pop-up content-->
+                  <a href="#portfolioModal" class="waves-effect waves-block waves-light modal-trigger" data-image-source="images/techScrape.png" data-title="techScrape. " data-content="TechScrape is an app created to help tech professionals keep track of tech news. It scrapes the front page of techcrunch and allows users to make and save notes on interesting articles. Front end technologies include html, css, and JavaScript. Backend technologies include Node.js, express, mongodb, and moongose." data-demo-link="https://sleepy-waters-57407.herokuapp.com/"> <!-- Portfolio pop-up content-->
                     <div class="protfolio-image">
-                      <img src="images/tech.png" width="390" height="280" alt="portfolio"> <!-- portfolio thumbnail-->
+                      <img src="images/techScrape.png" width="390" height="280" alt="portfolio"> <!-- portfolio thumbnail-->
                       <div class="protfolio-content waves-effect waves-block waves-light">
                         <div class="protfolio-content__inner">
                           <h2 class="p-title">techScrape</h2>
