--- a/public/index.html
+++ b/public/index.html
@@ -804,6 +804,19 @@
               
  <!-- Single Portfolio-->
               <li class="single-port-item category-1 category-3">
+                  <a href="#portfolioModal" class="waves-effect waves-block waves-light modal-trigger" data-image-source="images/amazon.png" data-title="amazon. " data-content="The amazon application was built using the amazon's product advertising api, mySQL database, and a Node.js/Express server. The app allows the user to search amazon products " data-demo-link="https://amodb.herokuapp.com/"> <!-- Portfolio pop-up content-->
+                    <div class="protfolio-image">
+                      <img src="images/amazon.png" width="390" height="280" alt="portfolio"> <!-- portfolio thumbnail-->
+                      <div class="protfolio-content waves-effect waves-block waves-light">
+                        <div class="protfolio-content__inner">
+                          <h2 class="p-title">amazon</h2>
+                        </div>
+                      </div>
+                      <div class="p-overlay"></div>
+                    </div>
+                  </a>
+                </li>
+              <li class="single-port-item category-1 category-3">
                   <a href="#portfolioModal" class="waves-effect waves-block waves-light modal-trigger" data-image-source="images/techScrape.png" data-title="techScrape. " data-content="TechScrape is an app created to help tech professionals keep track of tech news. It scrapes the front page of techcrunch and allows users to make and save notes on interesting articles. Front end technologies include html, css, and JavaScript. Backend technologies include Node.js, express, mongodb, and moongose." data-demo-link="https://sleepy-waters-57407.herokuapp.com/"> <!-- Portfolio pop-up content-->
                     <div class="protfolio-image">
                       <img src="images/techScrape.png" width="390" height="280" alt="portfolio"> <!-- portfolio thumbnail-->
