took scarface off

--- a/public/index.html
+++ b/public/index.html
@@ -948,7 +948,7 @@
                 </li>
                 <!--/ single portfolio -->
 
-                <li class="single-port-item category-3">
+                <!-- <li class="single-port-item category-3">
                   <a href="#portfolioModal" class="waves-effect waves-block waves-light modal-trigger" data-image-source="https://i.ytimg.com/vi/usR-Q81m0v4/maxresdefault.jpg" data-title="Royal Rumble RPG" data-content="A game app that picks which character you would be from the movie Scarface through a survey that the user completes. Technologies use include html,bootstrap, css, JavaScript, jQuery, Node.js and express" data-demo-link="http://scarface.herokuapp.com/">
                     <div class="protfolio-image">
                       <img src= "https://i.ytimg.com/vi/usR-Q81m0v4/maxresdefault.jpg" width="390" height="280" alt="portfolio">
@@ -960,7 +960,7 @@
                       <div class="p-overlay"></div>
                     </div>
                   </a>
-                </li>
+                </li> -->
 
 
               </ul>
